--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-  "name": "inst-gui",
-  "productName": "inst-gui",
+  "private": true,
+  "name": "instbotgui",
+  "productName": "Instagram Bot UI",
   "version": "1.0.0",
-  "description": "My Electron application description",
-  "main": "src/gui/index.js",
+  "description": "UI application for instagram bot",
+  "main": ".dist/mainProcess/src/index.js",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "dev": "npm run mainProcess-build && cross-env NODE_ENV=development BROWSER=none npm-run-all --parallel react-start electron-start",
+    "start": "cross-env NODE_ENV=production npm-run-all rendererProcess-build mainProcess-build electron-start",
+    "make": "cross-env NODE_ENV=production npm-run-all rendererProcess-build mainProcess-build electron-make",
+    "package": "cross-env NODE_ENV=production npm-run-all rendererProcess-build mainProcess-build electron-package",
+    "electron-start": "electron-forge start",
+    "electron-package": "electron-forge package",
+    "electron-make": "electron-forge make",
+    "electron-publish": "electron-forge publish",
+    "react-lint": "eslint ./src --ext .ts,.js,.tsx",
+    "react-start": "react-app-rewired start",
+    "mainProcess-build": "cd mainProcess && tsc",
+    "rendererProcess-build": "react-app-rewired build"
   },
   "keywords": [],
   "author": {
@@ -24,7 +32,7 @@
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
-            "name": "inst_gui"
+            "name": "InstBotGui"
           }
         },
         {
@@ -45,16 +53,65 @@
     }
   },
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "12",
+    "@types/node-static": "^0.7.5",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/redux-logger": "^3.0.8",
+    "@types/redux-saga": "^0.10.5",
+    "@types/testing-library__dom": "^7.5.0",
+    "@types/unzipper": "^0.10.3",
+    "antd": "^4.8.0",
+    "axios": "^0.21.0",
+    "cross-env": "^7.0.2",
+    "customize-cra": "^1.0.0",
+    "electron-devtools-installer": "^3.1.0",
     "electron-squirrel-startup": "^1.0.0",
-    "github-download": "^0.5.0",
-    "prettier": "^2.1.2"
+    "node-static": "^0.7.11",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.1.2",
+    "promisify-child-process": "^4.1.1",
+    "react": "^16.13.1",
+    "react-app-rewired": "^2.1.6",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "storeon": "^3.1.1",
+    "unzipper": "^0.10.11"
   },
   "devDependencies": {
-    "@electron-forge/cli": "6.0.0-beta.53",
-    "@electron-forge/maker-deb": "6.0.0-beta.53",
-    "@electron-forge/maker-rpm": "6.0.0-beta.53",
-    "@electron-forge/maker-squirrel": "6.0.0-beta.53",
-    "@electron-forge/maker-zip": "6.0.0-beta.53",
-    "electron": "10.1.3"
+    "@electron-forge/cli": "6.0.0-beta.52",
+    "@electron-forge/maker-deb": "6.0.0-beta.52",
+    "@electron-forge/maker-rpm": "6.0.0-beta.52",
+    "@electron-forge/maker-squirrel": "6.0.0-beta.52",
+    "@electron-forge/maker-zip": "6.0.0-beta.52",
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
+    "electron": "9.3.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.0",
+    "typescript": "^3.7.0"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
