--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "customize-cra": "^1.0.0",
     "electron-devtools-installer": "^3.1.0",
     "electron-squirrel-startup": "^1.0.0",
+    "husky": "^4.3.0",
     "node-static": "^0.7.11",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
