--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "private": true,
   "name": "instbot",
-  "productName": "InsagramBotUI",
+  "productName": "instUI",
   "version": "1.0.0",
   "description": "UI application for instagram bot",
   "main": ".dist/mainProcess/src/index.js",
   "scripts": {
-    "dev": "npm run mp-build && cross-env NODE_ENV=development npm-run-all --parallel react-start electron-start",
+    "dev": "npm run mp-build && cross-env NODE_ENV=development BROWSER=none npm-run-all --parallel react-start electron-start",
     "start": "cross-env NODE_ENV=production npm-run-all rp-build mp-build electron-start",
     "make": "cross-env NODE_ENV=production npm-run-all rp-build mp-build electron-make",
     "package": "cross-env NODE_ENV=production npm-run-all rp-build mp-build electron-package",
@@ -29,10 +29,8 @@
     "forge": {
       "packagerConfig": {
         "ignore": [
+          ".ts",
           "/.idea",
-          "/mainProcess",
-          "/rendererProcess",
-          "/types",
           "/.editorconfig",
           "/.gitignore",
           "/.prettierrc",
