--- a/mainProcess/tsconfig.json
+++ b/mainProcess/tsconfig.json
@@ -1,17 +1,11 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "allowJs": true,
     "module": "commonjs",
-    "noImplicitAny": true,
-    "sourceMap": false,
     "baseUrl": "./src",
     "outDir": "../.dist",
+    "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "paths": {
-      "*": ["../node_modules/*"]
-    }
-  },
-  "include": ["./src/**/*"]
+    "skipLibCheck": true
+  }
 }
