--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "npm run mp-build && cross-env NODE_ENV=development BROWSER=none npm-run-all --parallel react-start electron-start",
     "start": "cross-env NODE_ENV=production npm-run-all rp-build mp-build electron-start",
     "make": "cross-env NODE_ENV=production npm-run-all rp-build mp-build electron-make",
-    "package": "cross-env NODE_ENV=production npm-run-all rp-build mp-build electron-package",
+    "package": "cross-env NODE_ENV=production npm-run-all rp-build mp-build electron-build",
     "electron-start": "electron .dist/mainProcess/src/index.js",
     "electron-build": "electron-builder build",
     "react-lint": "eslint ./src --ext .ts,.js,.tsx",
