Fix scripts, bump version

--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "private": true,
   "name": "instbot",
   "productName": "Instagram Bot UI",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "description": "UI application for instagram bot",
   "main": ".dist/mainProcess/src/index.js",
   "scripts": {
     "dev": "npm run mp-build && cross-env NODE_ENV=development BROWSER=none npm-run-all --parallel react-start electron-start",
     "start": "cross-env NODE_ENV=production npm-run-all rp-build mp-build electron-start",
-    "make": "cross-env NODE_ENV=production npm-run-all rp-build mp-build electron-make",
-    "package": "cross-env NODE_ENV=production npm-run-all rp-build mp-build electron-build",
+    "build": "cross-env NODE_ENV=production npm-run-all rp-build mp-build electron-build",
     "electron-start": "electron .dist/mainProcess/src/index.js",
     "electron-build": "electron-builder build",
     "react-lint": "eslint ./src --ext .ts,.js,.tsx",
