--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "electron": "^11.0.3",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "electron-builder": "^22.10.5"
   },
   "eslintConfig": {
     "extends": "react-app"
